k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-kjs-deployment
  labels:
    app: portfolio-kjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-kjs
  template:
    metadata:
      labels:
        app: portfolio-kjs
    spec:
      containers:
      - name: portfolio-kjs-container
        image: ghcr.io/project-pages/portfolio-kjs:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
