k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-kjs-service
  namespace: kjs
spec:
  selector:
    app: portfolio-kjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
